Fix option text showing behind form text

--- a/app/frontend/src/form/Autocomplete/AutocompleteText.css
+++ b/app/frontend/src/form/Autocomplete/AutocompleteText.css
@@ -9,7 +9,7 @@
     position: absolute;
     left: 0;
     top: 1.15em;
-    z-index: 1;
+    z-index: 2;
     width: 100%;
 }
 .editable_field.autocomplete .options_inner
